cmake_minimum_required(VERSION 3.6)

PROJECT(TestCMAKE)

MESSAGE(INFO " PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
MESSAGE(INFO " PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

if (ANDROID)
  ADD_DEFINITIONS(-D_OS_LINUX -D_OS_ANDROID)
elseif(LINUX)
  ADD_DEFINITIONS(-D_OS_LINUX)
else(ANDROID)
  ADD_DEFINITIONS(-D_OS_LINUX)
endif (ANDROID)

SET(CMAKE_PRJ_C_FLAGS "-Werror -Wall")
SET(CMAKE_PRJ_CXX_FLAGS "")

ADD_SUBDIRECTORY(os)
ADD_SUBDIRECTORY(utest)

MESSAGE(INFO " CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
MESSAGE(INFO " CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
MESSAGE(INFO " CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(INFO " IS ANDROID: ${ANDROID}")
