AUX_SOURCE_DIRECTORY(./src os_src)
INCLUDE_DIRECTORIES(./inc ./src)
ADD_LIBRARY(libos STATIC ${os_src})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_C_FLAGS}")
MESSAGE(INFO " CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
SET_TARGET_PROPERTIES(libos PROPERTIES OUTPUT_NAME "os")
if (NOT ANDROID)
  SET(CMAKE_CXX_FLAGS "-fPIC ${CMAKE_CXX_FLAGS}")
elseif (ANDROID)
  SET(CMAKE_CXX_FLAGS "-llog ${CMAKE_CXX_FLAGS}")
endif ()


