#AUX_SOURCE_DIRECTORY(./src prj_src)
#INCLUDE_DIRECTORIES(./inc ./src)
#ADD_LIBRARY(libprj STATIC ${prj_src})
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_C_FLAGS}")
#MESSAGE(INFO " CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
#SET_TARGET_PROPERTIES(libprj PROPERTIES OUTPUT_NAME "libprj")
ADD_SUBDIRECTORY(protocols/rtp_rtcp)
ADD_SUBDIRECTORY(omxil)

if(THIRD_PARTY_ENABLE)
ADD_SUBDIRECTORY(third_party/aac)
ADD_SUBDIRECTORY(third_party/libavc)
endif(THIRD_PARTY_ENABLE)
