SET(Src_List a.cpp)
MESSAGE(INFO " Src_List: ${Src_List}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)

if (ANDROID)
  SET(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE ${CMAKE_EXE_LINKER_FLAGS}")
endif (ANDROID)

MESSAGE(INFO " src CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

ADD_EXECUTABLE(MainTest ${Src_List})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(MainTest libcmake)
