SET(OS_TEST_SRC os_utest.cpp)
MESSAGE(INFO " OS_TEST_SRC: ${OS_TEST_SRC}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/os/inc)

if (ANDROID)
  SET(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE ${CMAKE_EXE_LINKER_FLAGS}")
endif (ANDROID)

MESSAGE(INFO " CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_C_FLAGS} -pthread")
MESSAGE(INFO " CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(os_utest ${OS_TEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(os_utest libos)
