AUX_SOURCE_DIRECTORY(./src utility_src)
INCLUDE_DIRECTORIES(./inc ./src ../os/inc ../core/inc)
ADD_LIBRARY(libutility STATIC ${utility_src})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_C_FLAGS}")
MESSAGE(INFO " CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
SET_TARGET_PROPERTIES(libutility PROPERTIES OUTPUT_NAME "utility")
TARGET_LINK_LIBRARIES(libutility libos)
