SET(OMXIL_TEST_SRC utest_omxil.cpp)
MESSAGE(INFO " OMXIL_TEST_SRC: ${OMXIL_TEST_SRC}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/os/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/utility/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/projects/omxil/inc)

if (ANDROID)
  SET(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE -llog ${CMAKE_EXE_LINKER_FLAGS}")
endif (ANDROID)

MESSAGE(INFO " CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_CXX_FLAGS} -pthread")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_PRJ_C_FLAGS} -pthread")
MESSAGE(INFO " omxil_utest CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
MESSAGE(INFO " omxil_utest CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(omxil_utest ${OMXIL_TEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(omxil_utest libos libutility libomxil)
