AUX_SOURCE_DIRECTORY(./src/ rtmp_src)
AUX_SOURCE_DIRECTORY(./src/srs-th3rd/core rtmp_3rd_core_src)
AUX_SOURCE_DIRECTORY(./src/srs-th3rd/kernel rtmp_3rd_kernel_src)
AUX_SOURCE_DIRECTORY(./src/srs-th3rd/protocol rtmp_3rd_protocol_src)
AUX_SOURCE_DIRECTORY(./src/srs-th3rd/libs rtmp_3rd_libs_src)
INCLUDE_DIRECTORIES(./inc ./src ./src/srs-th3rd/ ./src/srs-th3rd/core ./src/srs-th3rd/kernel ./src/srs-th3rd/libs ./src/srs-th3rd/protocol ../../../os/inc ../../../core/inc)
ADD_LIBRARY(librtmp STATIC ${rtmp_src} ${rtmp_3rd_core_src} ${rtmp_3rd_kernel_src} ${rtmp_3rd_libs_src} ${rtmp_3rd_protocol_src})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_CXX_FLAGS} --std=c++11 -Wno-unused-function -Wno-literal-suffix")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_PRJ_C_FLAGS}")
MESSAGE(INFO " librtmp CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
MESSAGE(INFO " librtmp CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
SET_TARGET_PROPERTIES(librtmp PROPERTIES OUTPUT_NAME "rtmp")
#TARGET_LINK_LIBRARIES(librtmp)
if (NOT ANDROID)
  SET(CMAKE_CXX_FLAGS "-fPIC ${CMAKE_CXX_FLAGS} -D_OS_POSIX")
elseif (ANDROID)
  SET(CMAKE_CXX_FLAGS "-llog ${CMAKE_CXX_FLAGS} -D_OS_POSIX")
elseif (WINDOWS)
endif ()

ADD_SUBDIRECTORY(utest)
