AUX_SOURCE_DIRECTORY(./src rtp_rtcp_src)
AUX_SOURCE_DIRECTORY(./src/rtcp_packet rtcp_packet_src)
INCLUDE_DIRECTORIES(./inc ./src ../../../os/inc ../../../core/inc)
ADD_LIBRARY(librtp_rtcp STATIC ${rtp_rtcp_src} ${rtcp_packet_src})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_CXX_FLAGS} --std=c++11 -Wno-unused-function")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_PRJ_C_FLAGS}")
MESSAGE(INFO " librtp_rtcp CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
MESSAGE(INFO " librtp_rtcp CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
SET_TARGET_PROPERTIES(librtp_rtcp PROPERTIES OUTPUT_NAME "rtp_rtcp")
TARGET_LINK_LIBRARIES(librtp_rtcp libos)
if (NOT ANDROID)
  SET(CMAKE_CXX_FLAGS "-fPIC ${CMAKE_CXX_FLAGS} -DOS_POSIX -DOS_LINUX")
elseif (ANDROID)
  SET(CMAKE_CXX_FLAGS "-llog ${CMAKE_CXX_FLAGS} -DOS_POSIX -DOS_LINUX")
elseif (WINDOWS)
endif ()

ADD_SUBDIRECTORY(utest)
