SET(RTMP_TEST_SRC utest_rtmp_h264_publish.cpp)
MESSAGE(INFO " RTMP_TEST_SRC: ${RTMP_TEST_SRC}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/os/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/utility/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/projects/protocols/rtmp/inc)

if (ANDROID)
  SET(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE -llog ${CMAKE_EXE_LINKER_FLAGS}")
endif (ANDROID)

MESSAGE(INFO " CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_CXX_FLAGS} -pthread")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_PRJ_C_FLAGS} -pthread")
MESSAGE(INFO " rtmp_utest CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
MESSAGE(INFO " rtmp_utest CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(rtmp_h264_publish_utest ${RTMP_TEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(rtmp_h264_publish_utest libos librtmp)

SET(RTMP_AUDIO_TEST_SRC utest_rtmp_aac_publish.cpp)
ADD_EXECUTABLE(rtmp_aac_publish_utest ${RTMP_AUDIO_TEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(rtmp_aac_publish_utest libos librtmp)

SET(RTMP_PLAY_TEST_SRC utest_rtmp_play.cpp)
ADD_EXECUTABLE(rtmp_play_utest ${RTMP_PLAY_TEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(rtmp_play_utest libos librtmp)
