SET(RTP_TEST_SRC utest_rtp.cpp)
MESSAGE(INFO " RTP_RTCP_TEST_SRC: ${RTP_RTCP_TEST_SRC}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/os/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/utility/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/projects/protocols/rtp_rtcp/inc)

if (ANDROID)
  SET(CMAKE_EXE_LINKER_FLAGS "-pie -fPIE -llog ${CMAKE_EXE_LINKER_FLAGS}")
endif (ANDROID)

MESSAGE(INFO " CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PRJ_C_FLAGS} -pthread -g -O2")
MESSAGE(INFO " CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(rtp_utest ${RTP_TEST_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
TARGET_LINK_LIBRARIES(rtp_utest libos libutility librtp_rtcp)

SET(RTCP_TEST_SRC utest_rtcp.cpp)
ADD_EXECUTABLE(rtcp_utest ${RTCP_TEST_SRC})
TARGET_LINK_LIBRARIES(rtcp_utest libos libutility librtp_rtcp)

